--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <groupId>org.hobbit</groupId>
             <artifactId>hobbit-java-sdk</artifactId>
             <version>1.1.3</version>
-            <version>1.1.1</version>
+            <!--<version>1.1.1</version>-->
             <!--exclusions>
                 <exclusion>
                     <artifactId>log4j-over-slf4j</artifactId>
@@ -63,7 +63,7 @@
             <groupId>org.apache.jena</groupId>
             <artifactId>apache-jena-libs</artifactId>
             <type>pom</type>
-            <version>3.1.0</version>
+            <version>3.6.0</version>
         </dependency>
         <dependency>
             <groupId>com.spotify</groupId>
