DataGenerator optimization - send data to taskGenerator directly while crawling.

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <!-- Loading configuration from .ini file -->
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
