Updated ReadMe and POM file

--- a/src/main/resources/factcheckBenchmark.ini
+++ b/src/main/resources/factcheckBenchmark.ini
@@ -1,11 +1,11 @@
 [data]
-train = D:/Universitat Paderborn/Semester 3/Project/factcheck-benchmark/data/factbench/train
-test = D:/Universitat Paderborn/Semester 3/Project/factcheck-benchmark/data/factbench/test
+train = /Users/oshando/IdeaProjects/factcheck-benchmark/data/factbench/train
+test = /Users/oshando/IdeaProjects/factcheck-benchmark/data/factbench/test/correct/award
 
 [dataTrain]
-correct = D:/Universitat Paderborn/Semester 3/Project/factcheck-benchmark/data/factbench/train/correct
-wrong = D:/Universitat Paderborn/Semester 3/Project/factcheck-benchmark/data/factbench/train/wrong
+correct = /Users/oshando/IdeaProjects/factcheck-benchmark/data/factbench/train/correct
+wrong = /Users/oshando/IdeaProjects/factcheck-benchmark/data/factbench/train/wrong
 
 [dataTest]
-correct = D:/Universitat Paderborn/Semester 3/Project/factcheck-benchmark/data/factbench/test/correct
-wrong = D:/Universitat Paderborn/Semester 3/Project/factcheck-benchmark/data/factbench/test/wrong
+correct = /Users/oshando/IdeaProjects/factcheck-benchmark/data/factbench/test/correct
+wrong = /Users/oshando/IdeaProjects/factcheck-benchmark/data/factbench/test/wrong
