Refactored class packages, implemented dataset selection and benchmark components bug fixes

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,11 +4,12 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
-log4j.logger.org.apache.http=ERROR
-log4j.logger.org.apache.jena=ERROR
-log4j.logger.com.spotify.docker=ERROR
-log4j.logger.org.hobbit.sdk.examples.examplebenchmark.system.SystemAdapter=INFO
-log4j.logger.org.hobbit.sdk.examples.examplebenchmark.benchmark.TaskGenerator=INFO
-log4j.logger.org.hobbit.sdk.examples.dummybenchmark.DataGenerator=INFO
-log4j.logger.org.hobbit.sdk.examples.dummybenchmark.EvaluationModule=INFO
-log4j.logger.org.hobbit.sdk.LocalEvalStorage=INFO
+log4j.logger.org.apache.http=DEBUG
+log4j.logger.org.apache.jena=DEBUG
+log4j.logger.com.spotify.docker=DEBUG
+log4j.logger.org.dice.factcheckbenchmark.system.SystemAdapter=DEBUG
+log4j.logger.org.dice.factcheckbenchmark.benchmark.TaskGenerator=DEBUG
+log4j.logger.org.dice.factcheckbenchmark.benchmark.DataGenerator=DEBUG
+log4j.logger.org.dice.factcheckbenchmark.benchmark.EvalModule=DEBUG
+log4j.logger.org.dice.factcheckbenchmark.benchmark.EvalStorage=DEBUG
+log4j.logger.org.dice.factcheckbenchmark.benchmark.BenchmarkController=DEBUG
