Added dummy System Adapter

--- a/factcheck-data/api/defacto.ini
+++ b/factcheck-data/api/defacto.ini
@@ -17,7 +17,7 @@ FIELDS_INPUT = titleText,text
 FIELDS_OUTPUT = id,titleText
 
 [crawl]
-; the bing api key get your own at: 
+; the bing api key get your own at:
 ; BING_API_KEY = vm+K+uxrwn3oRap0Ou87KePKjGzH3gLGFM1vMw776wc=
 BING_API_KEY = grgZ1JV8G6y/zbIVA9DChAuOuUIjdcsHoxhTkz2MXKQ
 ; number of search results return be the search engine
@@ -26,7 +26,7 @@ NUMBER_OF_SEARCH_RESULTS = 20
 NUMBER_OF_SEARCH_RESULTS_THREADS = 40
 ; crawl thread gets terminated after this time
 WEB_SEARCH_TIMEOUT_MILLISECONDS = 10000
-; One thread for every BOA pattern, usually the same as the number of BOA patterns 
+; One thread for every BOA pattern, usually the same as the number of BOA patterns
 NUMBER_OF_SEARCH_THREADS = 10
 ; the amount of time which lies between a google page rank request (in ms)
 GOOGLE_WAIT_TIME = 2000
@@ -51,7 +51,7 @@ port = 1234
 
 [extract]
 ; when we search for sentence which contain two labels, this is the amount of tokens between them
-NUMBER_OF_TOKENS_BETWEEN_ENTITIES = 20
+NUMBER_OF_TOKENS_BETWEEN_ENTITIES = 50
 ; the number of stanford models which get loaded on system start
 NUMBER_NLP_STANFORD_MODELS = 2
 
@@ -59,7 +59,7 @@ NUMBER_NLP_STANFORD_MODELS = 2
 ; write the training examples in this file
 FACT_TRAINING_DATA_FILENAME = resources/training/arff/fact/defacto_fact.arff
 ; LINEAR_REGRESSION_CLASSIFIER or MULTILAYER_PERCEPTRON or SMO
-FACT_CLASSIFIER_TYPE = machinelearning/model/fact/66_33_proof_smo_reg/66_33_proof_smo_reg_polykernel.model
+FACT_CLASSIFIER_TYPE = machinelearning/model/fact/66_33_proof_smo_reg/SMO_Fact_Random_1.model
 ARFF_TRAINING_DATA_FILENAME = machinelearning/model/fact/66_33_proof_smo_reg/66_33_proof_smo_reg_polykernel.arff
 ; do we want to write the fact confirmation weka training file
 OVERWRITE_FACT_TRAINING_FILE = false
@@ -67,13 +67,13 @@ OVERWRITE_FACT_TRAINING_FILE = false
 
 [evidence]
 ; LINEAR_REGRESSION_CLASSIFIER or MULTILAYER_PERCEPTRON or SMO
-EVIDENCE_CLASSIFIER_TYPE = machinelearning/model/evidence/j48_ml_.model
+EVIDENCE_CLASSIFIER_TYPE = machinelearning/model/evidence/J48_Model.model
 ; write the training examples in this file
 EVIDENCE_TRAINING_DATA_FILENAME = resources/training/arff/evidence/defacto_evidence.arff
 ; active this flag to rewrite the training data
 OVERWRITE_EVIDENCE_TRAINING_FILE = false
-; see the paper Nakamura et. al. 2007 for details 
-WEBSITE_SIMILARITY_THRESHOLD = 0.8
+; see the paper Nakamura et. al. 2007 for details
+WEBSITE_SIMILARITY_THRESHOLD = 0.5
 ; onyl this much results will be returned from wikipedia topic term query: "barack obama michelle obama" returns 860 results
 MAX_WIKIPEDIA_RESULTS = 10
 ; use only the n most frequent topic terms from wikipedia pages
@@ -85,15 +85,26 @@ OVERWRITE_EVIDENCE_MODEL = false
 ; no google page rank defined yet
 UNASSIGNED_PAGE_RANK = 11
 ; threshold for when a complex proof is considered to be supporting a fact
-CONFIRMATION_THRESHOLD = 0.5
+CONFIRMATION_THRESHOLD = 0.35
 ;return all websites even the website has no proof
 DISPLAY_WEBSITES_WITH_NO_PROOF = false
 
 WORDNET_DICTIONARY = /data/wordnet/dict
 
 [elastic]
-SERVER_ADDRESS = 131.234.28.255
+SERVER_ADDRESS = 131.234.28.204
 PORT_NUMBER = 6060
+SERVER_ADDRESS_TEST = 131.234.28.204
+
+[topicTerms]
+NUMBER_OF_TERMS = 20
+
+[corenlp]
+USE_SERVER = false
+SERVER_ADDRESS1 = 131.234.29.15
+PORT_NUMBER1 = 9000
+SERVER_ADDRESS2 = 131.234.29.15
+PORT_NUMBER2 = 9200
 
 [mysql]
 DBUSER = root
